// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a CreateAcc function When Button Create Account is pressed Then function checkTextInput is invoked 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": "100%",
      "resizeMode": "contain",
      "width": "100%",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
          "justifyContent": "center",
          "padding": 25,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#f7f7f7",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
          "justifyContent": "center",
          "width": "80%",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCompleteType="email"
        maxLength={30}
        onChangeText={[Function]}
        placeholder="Email"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="words"
        autoCompleteType="name"
        maxLength={30}
        onChangeText={[Function]}
        placeholder="Name"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="sentences"
        maxLength={20}
        onChangeText={[Function]}
        placeholder="Location"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "flexDirection": "row",
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          maxLength={45}
          onChangeText={[Function]}
          placeholder="Password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Object {
              "flex": 1,
              "paddingRight": 8,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "maxHeight": 25,
                "opacity": 1,
                "resizeMode": "contain",
              }
            }
          >
            <Image
              source={1}
            />
          </View>
        </RNGestureHandlerButton>
      </View>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        maxLength={45}
        onChangeText={[Function]}
        placeholder="Confirm Password"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={Object {}}
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="CreateAccount"
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              disabled={false}
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#FF988F",
                  },
                ]
              }
            >
              Create Account
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Given a CreateAcc function When we invoke CreateAccView Then the render should match its snaptshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": "100%",
      "resizeMode": "contain",
      "width": "100%",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
          "justifyContent": "center",
          "padding": 25,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#f7f7f7",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
          "justifyContent": "center",
          "width": "80%",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCompleteType="email"
        maxLength={30}
        onChangeText={[Function]}
        placeholder="Email"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="words"
        autoCompleteType="name"
        maxLength={30}
        onChangeText={[Function]}
        placeholder="Name"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="sentences"
        maxLength={20}
        onChangeText={[Function]}
        placeholder="Location"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "flexDirection": "row",
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          maxLength={45}
          onChangeText={[Function]}
          placeholder="Password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Object {
              "flex": 1,
              "paddingRight": 8,
            }
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "maxHeight": 25,
                "opacity": 1,
                "resizeMode": "contain",
              }
            }
          >
            <Image
              source={1}
            />
          </View>
        </RNGestureHandlerButton>
      </View>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        maxLength={45}
        onChangeText={[Function]}
        placeholder="Confirm Password"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={Object {}}
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="CreateAccount"
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              disabled={false}
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#FF988F",
                  },
                ]
              }
            >
              Create Account
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Given a CreateAcc function When we write any string in each TextInput Then it should fire a ChangeText event 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": "100%",
      "resizeMode": "contain",
      "width": "100%",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
          "justifyContent": "center",
          "padding": 25,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#f7f7f7",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": "100%",
          "justifyContent": "center",
          "width": "80%",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 200,
            "width": 200,
          }
        }
      />
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCompleteType="email"
        maxLength={30}
        onChangeText={[Function]}
        placeholder="Email"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value={
          Object {
            "text": "email",
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="words"
        autoCompleteType="name"
        maxLength={30}
        onChangeText={[Function]}
        placeholder="Name"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value={
          Object {
            "text": "name",
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCapitalize="sentences"
        maxLength={20}
        onChangeText={[Function]}
        placeholder="Location"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value={
          Object {
            "text": "location",
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "flexDirection": "row",
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          maxLength={45}
          onChangeText={[Function]}
          placeholder="Password"
          rejectResponderTermination={true}
          secureTextEntry={true}
          style={
            Object {
              "flex": 1,
              "paddingRight": 8,
            }
          }
          underlineColorAndroid="transparent"
          value={
            Object {
              "text": "password",
            }
          }
        />
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
        >
          <View
            accessible={true}
            style={
              Object {
                "maxHeight": 25,
                "opacity": 1,
                "resizeMode": "contain",
              }
            }
          >
            <Image
              source={1}
            />
          </View>
        </RNGestureHandlerButton>
      </View>
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        maxLength={45}
        onChangeText={[Function]}
        placeholder="Confirm Password"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#e0e0e0",
            "borderRadius": 5,
            "borderWidth": 1,
            "fontFamily": "MontserratMedium",
            "marginBottom": 15,
            "paddingHorizontal": 15,
            "paddingVertical": 10,
            "width": "100%",
          }
        }
        underlineColorAndroid="transparent"
        value={
          Object {
            "text": "confirmedpassword",
          }
        }
      />
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={Object {}}
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="CreateAccount"
        >
          <View
            style={
              Array [
                Object {},
              ]
            }
          >
            <Text
              disabled={false}
              style={
                Array [
                  Object {
                    "color": "#007AFF",
                    "fontSize": 18,
                    "margin": 8,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#FF988F",
                  },
                ]
              }
            >
              Create Account
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;
